# task-management-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GET-STARTED.md  Makefile  README.md  data.json  docker-compose.yml  hardcopy.0  pyproject.toml  run_loop.py
.claude/: mcp.json  settings.json  skills.yaml
.claude/agents/: ezra-community-marketer.md  playwright-test-generator.md  playwright-test-healer.md  playwright-test-planner.md  pytest-test-generator.md  pytest-test-healer.md  pytest-test-planner.md  tdd-guide.md  vitest-test-generator.md  vitest-test-healer.md  vitest-test-planner.md
.claude/commands/: e2e.md  multi-backend.md  multi-execute.md  multi-frontend.md  multi-plan.md  multi-workflow.md  tdd.md
.claude/contexts/: whatsapp-referral-community.md
.github/workflows/: ci.yml  coverage-comment-post.yml
.planning/: MILESTONE-UAT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/reports/: MILESTONE_SUMMARY-v1.0.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/: AGENTS.md
docs/: FUTURE-SCOPE.md  plan.md  rational.md
docs/agents/: AGENT-CONTRACTS.md
docs/runtime/: RUNTIME-EXECUTION.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_373b0e5d4fa97ceb___init___py.html  z_373b0e5d4fa97ceb__codex_config_py.html  z_373b0e5d4fa97ceb_claude_py.html  z_373b0e5d4fa97ceb_openai_py.html  z_3b40b47697c99344_logging_py.html  z_4a89bb85a6902de6___init___py.html  z_4a89bb85a6902de6_codex_py.html  z_4a89bb85a6902de6_credentials_py.html  z_4a89bb85a6902de6_github_py.html  z_4a89bb85a6902de6_linear_py.html  z_4a89bb85a6902de6_logging_py.html  z_4a89bb85a6902de6_orchestrator_py.html  z_4a89bb85a6902de6_provider_py.html  z_4a89bb85a6902de6_runtime_py.html  z_4a89bb85a6902de6_test_fixture_py.html  z_4a89bb85a6902de6_wio_ipc_py.html  z_6155543abfa6c342___init___py.html  z_6155543abfa6c342_claude_py.html  z_6155543abfa6c342_codex_guards_py.html  z_6155543abfa6c342_codex_py.html  z_6155543abfa6c342_compat_py.html  z_6155543abfa6c342_handle_py.html  z_6155543abfa6c342_policy_py.html  z_6155543abfa6c342_protocol_py.html  z_6155543abfa6c342_resolver_py.html  z_67082f0121022959_backlog_py.html  z_67082f0121022959_base_py.html  z_67082f0121022959_builder_py.html  z_67082f0121022959_git_py.html  z_67082f0121022959_global_orchestrator_py.html  z_67082f0121022959_knowledge_py.html  z_67082f0121022959_linear_py.html  z_67082f0121022959_main_orchestrator_py.html  z_67082f0121022959_orchestrator_py.html  z_67082f0121022959_qa_py.html  z_67082f0121022959_risk_py.html  (+44 more)
notebooks/: 00_guardrails_audit.ipynb  01_contracts_playground.ipynb  02_risk_and_global_pure_logic.ipynb  03_main_orchestrator_dispatch.ipynb  04_linear_and_knowledge_readonly.ipynb  05_per_agent_smoke.ipynb  06_wio_full_loop.ipynb  07_full_pipeline_story.ipynb  README.md  _build_notebooks.py  _helpers.py
notebooks/agents/: 01_backlog_agent.ipynb  02_intelligence_agent.ipynb  03_builder_agent.ipynb  04_git_agent.ipynb  05_qa_agent.ipynb  06_uat_agent.ipynb  07_linear_agent.ipynb  08_risk_agent.ipynb  09_global_orchestrator.ipynb  10_main_orchestrator.ipynb  11_work_item_orchestrator.ipynb
runtime/: AGENT-CONTRACTS.md
scripts/: _lib.sh  auth-codex-host.sh  auth-codex.sh  auth-gemini.sh  auth-github.sh  auth-linear.sh  build.sh  clean.sh  docker-entrypoint.sh  down.sh  kill-stale.sh  logs.sh  ps.sh  run.sh  setup_gemini_adc.py  shell.sh  test_gemini_live.py  up.sh
skills/: 00-MAIN-ORCHESTRATOR.md  01-BACKLOG-PLANNING.md  02-IMPLEMENTATION.md  03-QA-REVIEW.md  04-GIT-PR-MANAGEMENT.md  05-LINEAR-SYSTEM-OF-RECORD.md  06-TASK-ORCHESTRATION.md  07-GLOBAL-ORCHESTRATION.md  08-UAT-VALIDATION.md  09-OBSERVABILITY-REPORTING.md  10-KNOWLEDGE-CONTEXT-ENRICHMENT.md  11-KNOWLEDGE-STORAGE.md  12-QUALITY-SCORING-RISK-ANALYSIS.md  13-ADAPTIVE-PRIORITIZATION.md  14-AUTO-IMPROVEMENT-TRIGGERS.md
src/backlog/: agent.py  contracts.py  prompts.py
src/fixture/: branch_test.py  pr_base_test.py  pr_title_test.py
src/hsb/: __init__.py
src/libs/: logging.py
src/linear/: __init__.py  agent.py  contracts.py  prompts.py
src/llm_providers/: README.md  __init__.py  base.py  errors.py  prompt.py  protocol.py  registry.py  tools.py
src/settings/: __init__.py  _env.py  codex.py  credentials.py  linear.py  logging.py  orchestrator.py  provider.py  runtime.py
src/tools/: __init__.py  linear.py
src/utils/: json.py  prompt.py
tests/: conftest.py  test_cli.py  test_contracts.py  test_hooks.py  test_integration.py  test_linear_agent.py
tests/integration/: test_backlog_agent.py  test_backlog_codex_live.py  test_backlog_message_consumption.py  test_backlog_runtime_parity.py  test_builder_agent.py  test_cli.py  test_git_agent.py  test_global_orchestrator_e2e.py  test_global_orchestrator_phase5.py  test_global_orchestrator_uat.py  test_llm_providers_integration.py  test_orchestrator_e2e.py  test_parallel_mode_e2e.py  test_qa_agent.py  test_run_loop.py  test_uat_agent.py  test_uat_fix_subtasks.py  test_wio_intelligence_enrichment.py  test_wio_intelligence_storage.py
tests/llm_providers/: test_auth_resolution.py  test_base.py  test_claude_errors.py  test_conformance.py  test_errors.py  test_prompt.py  test_protocol.py  test_registration_side_effects.py  test_registry.py  test_tools.py
tests/runtime/: test_claude_runtime.py  test_codex_guards.py  test_codex_runtime.py  test_gemini_guards.py  test_handle.py  test_make_agent_options.py  test_make_options_branches.py  test_oauth_guard.py  test_policy.py  test_protocol.py  test_resolve_runtime.py  test_resolver.py
tests/unit/: __init__.py  test_agents_pydantic.py  test_backlog_contract.py  test_builder_contract.py  test_cli.py  test_cli_coverage.py  test_coverage_gaps.py  test_filesystem_tools.py  test_final_gaps.py  test_git_contract.py  test_global_orchestrator.py  test_guards.py  test_knowledge_storage_schema.py  test_last_gaps.py  test_linear_middleware.py  test_linear_write_guard_g5.py  test_main_orchestrator.py  test_orchestrator.py  (+8 more)
(+347 files in other folders)
