[project]
name = "hsb-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.73",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "openai-codex-sdk>=0.1.11",
    "google-genai>=0.1.0",
    "langfuse>=2.0.0",
]

[project.scripts]
hsb = "hsb.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsb"]

[project.optional-dependencies]
eval = [
    "arize-phoenix>=4.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "jupyterlab>=4.0",  # for manual inspection notebooks under notebooks/
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",   # line length handled by formatter
    "TC001",  # pydantic models need runtime imports; TYPE_CHECKING requires model_rebuild()
]

[tool.ruff.lint.per-file-ignores]
"src/hsb/cli/*.py" = ["B008"]             # typer.Option() in function defaults is idiomatic
"src/hsb/cli/main.py" = ["E402"]          # sub-app imports must follow app = typer.Typer()
"tests/conftest.py" = ["E402"]            # Phase-5 fixtures import after event-loop setup
"tests/**/*.py" = ["SIM115"]             # structural tests use open().read() by convention
"tests/*.py" = ["SIM115"]
"notebooks/*.ipynb" = ["E402", "E701", "F841", "B007"]  # notebook idioms: imports-after-setup, single-line try/except, ad-hoc bindings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires live Linear MCP connection and ANTHROPIC_API_KEY",
    "live_codex: real Codex subscription smoke test (manual, opt-in via -m live_codex)",
]
