[project]
name = "hsb-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.73",
    "linear-api>=0.2.0",  # Linear GraphQL API client
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "openai-codex-sdk>=0.1.11",
]

[project.scripts]
hsb = "hsb.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsb", "src/llm_providers"]

[dependency-groups]
# PEP 735 dev group — installed by default with bare `uv sync` (no extra flag).
# These are project-internal tools (test/lint/type-check), not user-facing
# extras a downstream installer would opt into.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pylint>=3.0",
    "pre-commit>=4.0",
    "safety>=3.0",
    "bandit>=1.7",
    "jupyterlab>=4.0",  # for manual inspection notebooks under notebooks/
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",   # line length handled by formatter
    "TC001",  # pydantic models need runtime imports; TYPE_CHECKING requires model_rebuild()
]

[tool.ruff.lint.per-file-ignores]
"src/hsb/cli/*.py" = ["B008"]             # typer.Option() in function defaults is idiomatic
"src/hsb/cli/main.py" = ["E402"]          # sub-app imports must follow app = typer.Typer()
"src/hsb/settings/*.py" = ["TC003"]       # pydantic-settings needs runtime imports (same reason as TC001 above)
"tests/conftest.py" = ["E402"]            # Phase-5 fixtures import after event-loop setup
"tests/**/*.py" = ["SIM115"]             # structural tests use open().read() by convention
"tests/*.py" = ["SIM115"]
"notebooks/*.ipynb" = ["E402", "E701", "F841", "B007"]  # notebook idioms: imports-after-setup, single-line try/except, ad-hoc bindings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint.messages_control]
disable = ["C0103", "C0114", "C0115", "C0116", "R0903"]

[tool.bandit]
skips = ["B104", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
# pydantic.mypy teaches mypy about Field(alias=...) + populate_by_name so
# constructors accept both the python attribute name and the alias.
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: requires live Linear MCP connection and HSB_RUN_INTEGRATION=1",
    "live_codex: real Codex subscription smoke test (manual, opt-in via -m live_codex)",
]

[tool.coverage.run]
# Write relative paths into .coverage so consumers running in a different
# working directory (e.g. py-cov-action's Docker container reading the
# uploaded coverage file from /workdir) can resolve source files. Without
# this, the file records absolute paths like /home/runner/work/... which
# don't exist inside the action's container — the comment step fails with
# "No source for code: <absolute path>".
relative_files = true
source = ["src"]
